2016-06-07  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/sse.md (avx_vec_concat<mode>): Add v=v,vm and
	Yv=Yv,C alternatives.

2016-06-07  Richard Biener  <rguenther@suse.de>

	PR c/61564
	* common.opt (ffast-math): Make Optimization.

2016-06-07  Simon Dardis  <simon.dardis@imgtec.com>
	    Prachi Godbole  <prachi.godbole@imgtec.com>

	* config/mips/p5600.md (p5600_fpu_fadd): Remove checking for
	`fabs' and `fneg' type attributes.
	(p5600_fpu_fabs): Add `fmove' to the comment.

2016-06-07  Jan Hubicka  <hubicka@ucw.cz>

	* gimple.c: Include builtins.h
	(gimple_inexpensive_call_p): New function.
	* gimple.h (gimple_inexpensive_call_p): Declare.
	* tree-ssa-loop-ch.c (should_duplicate_loop_header_p): Use it.
	* tree-ssa-loop-ivcanon.c (tree_estimate_loop_size): Likewise;
	fix formatting.

2016-06-07  Paolo Carlini  <paolo.carlini@oracle.com>

	* diagnostic.c (diagnostic_impl, diagnostic_n_impl): New.
	(inform, inform_at_rich_loc, inform_n, warning, warning_at,
	warning_at_rich_loc, warning_n, pedwarn, permerror,
	permerror_at_rich_loc, error, error_n, error_at, error_at_rich_loc,
	sorry, fatal_error, internal_error, internal_error_no_backtrace):
	Use the above.

2016-06-07  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71428
	* tree-ssa-math-opts.c (perform_symbolic_merge): Properly distinguish
	BIT_FIELD_REF op vs. load.

2016-06-07  Richard Biener  <rguenther@suse.de>

	PR middle-end/71423
	* match.pd ((X | ~Y) -> Y <= X): Properly invert the comparison
	for signed ops.

2016-06-06  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.md (call): Generate indirect long calls to non-local
	functions on TARGET_64BIT.
	(call_value): Likewise.

2016-06-06  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.md (call_val_reg_64bit): Remove "reg: DI " clobber from
	pattern and subsequent splitters.
	(call_val_reg_64bit_post_reload): Likewise.

2016-06-07  Kugan Vivekanandarajah  <kuganv@linaro.org>

	PR middle-end/71408