@@ -1,3 +1,8 @@
+2016-06-07  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	* simplify-rtx.c (simplify_cond_clz_ctz): Delete 'mode' local
+	variable.
+
 2016-06-07  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/sse.md (avx_vec_concat<mode>): Add v=v,vm and
